# skill-optimization

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  compose.yaml  package-lock.json  package.json  pyproject.toml  requirements.txt
configs/: experiments.yaml  models.yaml
data/orqa/: README.md  questions.json  split.json
docs/: 01_problem_framing.md  02_experiment_design.md  03_results_and_analysis.md  04_marketplace_mapping.md  05_deepseek_negative_result_analysis.md  06_stepfun_interim_result.md  08_track_a_results.md  09_evomap_upload_update.md  evomap_sdk_setup.md  setup_and_repro.md
docs/plans/: 2026-03-26-orqa-track-a.md  2026-03-27-dev-env-uv-docker.md  2026-03-27-skillsbench-implementation-checklist.md
docs/skillsbench/: 01_overfull_hbox_pilot_analysis.md  environment_validation.md  (+3 more)
scripts/: build_harbor_tasks.py  evomap_sdk_build.mjs  generate_manifests.py  optimize_skill.py  publish_to_evomap.py  run_replication.py  sample_orqa.py  skillsbench_error_analysis.py  skillsbench_registry.py
skills/: schema.json
src/: agent_runner.py  error_analyzer.py  evaluator.py  evomap_publisher.py  llm_client.py  report_generator.py  report_generator_track_a.py  run_pipeline.py  run_track_a.py  skill_generator.py  skill_manager.py  skill_optimizer.py  skill_schema.py  task_loader.py
tests/: test_contracts.py  test_evaluator.py  test_evomap_publisher.py  test_llm_client.py  test_pipeline_smoke.py  test_registry.py  test_report_generator_track_a.py  test_run_track_a.py  test_skill_manager.py  test_task_loader.py  test_tooling_setup.py
(+1507 files in other folders)
