[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "skill-optimization-demo"
version = "0.1.0"
description = "Skill optimization research pipeline with EvoMap publishing support"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "jsonschema>=4.0",
  "openai>=1.0.0",
  "python-dotenv>=1.0",
  "pyyaml>=6.0",
  "rich>=13.0",
  "tiktoken>=0.7.0",
  "tqdm>=4.60.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
]

[tool.setuptools]
packages = ["src"]
